--- a/flowsint-app/index.html
+++ b/flowsint-app/index.html
@@ -15,15 +15,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     
     <!-- Favicon -->
-    <link rel="icon" href="/icon.ico" />
-    <link rel="apple-touch-icon" href="/icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/rsl-logo.svg" />
+    <link rel="apple-touch-icon" href="/rsl-logo.svg" />
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Graph based investigation manager."
+      content="RSL - Scarlet: plataforma OSINT Red Shadow Link da Scarlet Red Solutions."
     />
-    <title>Flowsint</title>
+    <title>RSL - Scarlet</title>
   </head>
   <body>
     <div id="root"></div>
